--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "author": "Jestin James",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.2.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "path": "^0.12.7",
+    "socket.io": "^4.4.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
