--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -16,7 +18,12 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-toastify": "^8.1.1"
+    "react-toastify": "^8.1.1",
+    "socket.io-client": "^4.4.1",
+    "stream-chat": "^5.6.0",
+    "stream-chat-react": "^7.0.0",
+    "timeago.js": "^4.0.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
